---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 13.04.2024
  Bugfixes:
    - fixed an that k2 was not swapped correctly
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 13.04.2024
  Bugfixes:
    - fixed an issue when techs have no effects declared
    - fixed issue in tech recursion skript
    - fixed issue with compat script when K2 is not present
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 11.04.2024
  Features:
    - added K2 compat
  Changes:
    - scanner now highlights only entities it can scan (PR #66)
  Bugfixes:
    - fix in item cleanup script (PR #61)
    - fixed issue when using scanner before knowledge console is put down (I #63)
    - fixed issue when opening rocket silo placed by bots (I #62)
---------------------------------------------------------------------------------------------------
Version: 0.5.9
Date: 19.02.2024
  Features:
    - added support for minibuffer tank mods
    - added basic Space Exploration data phase compatibilty (PR #57) 
  Changes:
    - nerfed advanced steam trains top speed
    - added crafting-with-fluid to steam assembler (PR #55)
  Bugfixes:
    - added checkup for gate edgecases
    - added checkup for drone port decon
---------------------------------------------------------------------------------------------------
Version: 0.5.8
Date: 24.01.2024
  Features:
    - added steam miner to steam power tech
    - added bio rocket fuel recipe
  Changes:
    - updated RU locale (PR #50)
  Bugfixes:
    - fixed bug with dangerOres
    - fixed that some recipes were set one machines but disabled
    - fixed bug that gia pump was placeable on nauvis
    - fixed rocket silo having bad state if placed by factory planner
    - fixed crash in multiplayer with non player forces