@@ -646,6 +646,7 @@ kr-matter-cryoflux-processing=Cryoflux conversion
 kr-matter-neodym-processing=Neodym conversion
 kr-matter-pythogas-processing=Pythogas conversion
 kr-matter-sulfur-processing=Sulfur conversion
+kr-matter-bio-matter-processing=Bio matter conversion
 
 
 [technology-description]
