@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.2
 Date: 13.04.2024
+  Features:
+    - added a matter tech for bio matter (K2)
+  Changes:
+    - adjusted K2s equipment to better fit in progression
   Bugfixes:
     - fixed an that k2 was not swapped correctly
 ---------------------------------------------------------------------------------------------------
